<resources>

    <string name="app_name">Business Card</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_join">Join</string>
    <string name="action_search">Search</string>
    <string name="action_accept">Accept</string>
    <string name="action_edit">Edit</string>
    <string name="create_new_account">Create a new account</string>
    <string name="log_with_account">Log in using and existing account</string>
    <string name="login">Log in with your account</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="username_hint">Username (used for log in)</string>
    <string name="address_hint">Address (optional)</string>
    <string name="password">Password</string>
    <string name="password_hint">Password (used for log in)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_button">Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_hint">Email (optional)</string>
    <string name="phone_hint">Phone (optional)</string>
    <string name="email_hint2">Email</string>
    <string name="phone_hint2">Phone</string>
    <string name="title">Title</string>
    <string name="create_account">Create Account</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="sign_up_success">You have successfully signed up.\nPlease login.</string>
    <string name="create_event_success">You have successfully created the event.</string>
    <string name="username_taken">This username has already been used</string>
    <string name="passcode_taken">This passcode has already been used</string>
    <string name="please_fill_required_fields">Please fill in the required fields</string>
    <string name="password_not_confirmed">The password was not correctly confirmed</string>
    <string name="username_contains_spaces">Your username must not contain any spaces</string>
    <string name="login_incorrect">Incorrect login, please try again.</string>
    <string name="login_successful">You have successfully logged in.</string>
    <string name="logout_successful">You have successfully logged out.</string>
    <string name="login_empty">Email and Password fields must not be empty.</string>
    <string name="email_invalid">Email is invalid.</string>
    <string name="action_logout">Logout</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="my_cards">My Cards</string>
    <string name="events">Events</string>
    <string name="no_cards">No Cards available</string>
    <string name="no_nearby_cards">No nearby Cards found</string>
    <string name="add_business_card">Add Business Card</string>
    <string name="edit_business_card">Edit Business Card</string>
    <string name="card_edit_success">You have successfully updated your business card.</string>
    <string name="unknown_error">An unknown error has occurred. Please try again.</string>
    <string name="card_add_success">You have successfully added your business card.</string>
    <string name="card_delete_success">You have successfully deleted your business card.</string>
    <string name="saved_card_remove_success">You have successfully removed the business card.</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="remove_card">Remove Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete_card_message">Are you sure you wish to delete this business card?\n\nTitle: %1$s\nEmail: %2$s\nPhone: %3$s\nAddress: %4$s</string>
    <string name="remove_card_message">Are you sure you wish to remove this business card from your Saved list?\n\nTitle: %1$s\nEmail: %2$s\nPhone: %3$s\nAddress: %4$s</string>
    <string name="remove_event_message">Are you sure you wish to remove this event?\n\n%1$s\n%2$s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_action_for_card">Choose an Action for this Card</string>
    <string name="public_text">Public</string>
    <string name="private_text">Private</string>
    <string name="nearby_cards">Nearby Cards</string>
    <string name="distance_meters">%1$sm</string>
    <string name="public_card_received">%1$s %2$s\'s %3$s Card was added to your Saved Cards</string>
    <string name="private_card_requested">%1$s %2$s\'s %3$s Card was requested.\nYou will have access to this card once the request is accepted.</string>
    <string name="shared_cared">Your %1$s Card was shared to %2$s %3$s.</string>
    <string name="no_events">No Events available</string>
    <string name="choose_action_for_event">Choose an Action for this Event</string>
    <string name="remove_event">Remove Event</string>
    <string name="no_event_cards">No Cards found for this Event</string>
    <string name="event_cards">Event Cards</string>
    <string name="save_card">Save Card</string>
    <string name="logout_message">Are you sure you wish to logout?</string>
    <string name="select_card_layout">Select Card layout</string>
    <string name="change">Change&#8230;</string>
    <string name="card_layout">Card Layout</string>
    <string name="x_of_y">%1$d of %2$d</string>
    <string name="view_card">View Card</string>
    <string name="request_card">Request Card</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="accepted_private_card_request">You have granted access to your business card.</string>
    <string name="denied_private_card_request">You have denied access to your business card.</string>
    <string name="passcode">Passcode</string>
    <string name="passcode2">"Passcode: "</string>
    <string name="event_passcode_title">Event Passcode</string>
    <string name="event_passcode_message">Please insert a valid Event Passcode in order to get access to the participants business cards.</string>
    <string name="submit">Submit</string>
    <string name="invalid_passcode">Invalid Passcode</string>
    <string name="cancel">Cancel</string>
    <string name="event_joined">You have successfully joined %1$s</string>
    <string name="passcode_does_not_exist">There is no Event associated with this Passcode.</string>
    <string name="event_already_joined">You have already joined this Event.</string>
    <string name="event_remove_success">You have successfully removed the event.</string>
    <string name="nearby_summary">100</string>
    <string name="nearby_title">Nearby Search Radius</string>
    <string name="logout_network_title">No Network Connection</string>
    <string name="logout_network_message">In order to logout you need to be connected to the Internet.</string>
    <string name="ok">OK</string>
    <string name="name_hint">Name</string>
    <string name="location_hint">Location</string>
    <string name="date">"Date: "</string>
    <string name="create_event">Create Event</string>
    <string name="passcode_too_long">The Passcode must not exceed 10 characters</string>
    <string name="no_share_users">There are no available users to share to.</string>
    <string name="select_user">Select User</string>
    <string name="save">Save</string>
    <string name="cancelled_shared_card">The card was not added to your Saved Cards list.</string>
    <string name="card_saved">The card was added to your Saved Cards list.</string>
    <string name="requested">Requested</string>
    <string name="internet_required">Internet required</string>
    <string name="internet_required_message">This feature requires an Internet connection.</string>
    <string name="internet_required_events_message">An Internet connection is required in order to view the Cards from an Event.</string>
    <string name="internet_required_card_edit_message">An Internet connection is required in order to edit a Card.</string>
    <string name="internet_required_card_add_message">An Internet connection is required in order to add a Card.</string>
    <string name="internet_required_card_request_message">An Internet connection is required in order to request a Card.</string>
    <string name="internet_required_card_save_message">An Internet connection is required in order to save a Card.</string>
    <string name="internet_required_card_remove_message">An Internet connection is required in order to remove a Card.</string>
    <string name="internet_required_card_delete_message">An Internet connection is required in order to delete a Card.</string>
    <string name="internet_required_card_share_message">An Internet connection is required in order to share a Card.</string>
    <string name="internet_required_event_remove_message">An Internet connection is required in order to remove an Event.</string>
    <string name="internet_required_create_account_message">An Internet connection is required in order to create an account.</string>
    <string name="internet_required_login_message">An Internet connection is required in order to log in.</string>

</resources>
