<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_radar" />

    <item
        android:id="@+id/action_join"
        android:title="@string/action_join"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_add_group" />

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="300"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_new" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:title="@string/action_logout" />
</menu>
