<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/title"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:hint="@string/title"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/first_name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:hint="@string/first_name"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/last_name"
            android:layout_marginTop="10dp"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/last_name"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/email_hint"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/phone_hint"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/username_hint"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/password_hint"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/confirm_password"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account" />
    </LinearLayout>

</ScrollView>
