<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/handshake"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/title"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:hint="@string/title"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/email_hint2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/phone_hint2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/address"
            android:layout_marginTop="10dp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/address_hint"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/is_public_container"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/is_public_checkbox"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/public_text"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dip"
                android:textSize="18sp"
                android:layout_weight="1"
                android:text="@string/card_layout"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/layout_color"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/actionbat_background"/>

            <Button
                android:id="@+id/change_layout"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change" />
        </LinearLayout>


        <Button
            android:id="@+id/add_edit_card_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_business_card" />
    </LinearLayout>

</ScrollView>
