<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/username"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/username"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:hint="@string/password"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_button" />
    </LinearLayout>

</ScrollView>